# visual-music

./: README.md  pubspec.yaml
.agents/: AGENTS.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/visual_music/: MainActivity.kt
docs/: audio_player_code_review.md  codebase_analysis_report.md  features_and_vision.md  project_vision.md  projectm_exception_patch_report.md  projectm_logger_usage_report.md  technical_architecture.md
docs/plans/: audio_player_plan.md  doc_restructure_plan.md  implementation_plan.md  refactoring_plan.md  task4_linux_crash_fix_plan.md  windows_bridge_plan.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/audio/: audio_controller.dart  internal_audio_player.dart  system_audio_capture.dart
lib/features/presets/: preset_extractor.dart  preset_service.dart
lib/features/visualizer/: overlay_ui.dart  visualizer_controller.dart  visualizer_screen.dart
lib/features/visualizer/widgets/: music_player_bar.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
projectm_ffi/: .metadata  README.md  ffigen.yaml  pubspec.yaml
projectm_ffi/android/: build.gradle
projectm_ffi/android/src/main/: AndroidManifest.xml
projectm_ffi/example/: README.md  pubspec.yaml
projectm_ffi/example/android/app/: build.gradle.kts
projectm_ffi/example/android/app/src/main/: AndroidManifest.xml
projectm_ffi/example/android/app/src/main/kotlin/com/example/projectm_ffi_example/: MainActivity.kt
projectm_ffi/example/lib/: main.dart
projectm_ffi/example/linux/: CMakeLists.txt
projectm_ffi/example/linux/runner/: my_application.cc
projectm_ffi/example/windows/: CMakeLists.txt
projectm_ffi/example/windows/runner/: Runner.rc  main.cpp
projectm_ffi/lib/: projectm_ffi.dart  projectm_ffi_bindings_generated.dart
projectm_ffi/linux/: CMakeLists.txt
projectm_ffi/src/: CMakeLists.txt  audio_capture.cpp  projectm_ffi.c  projectm_ffi.cpp  projectm_ffi.h
projectm_ffi/src/cmake/: FindGLEW.cmake
projectm_ffi/windows/: CMakeLists.txt
projectm_texture/: .metadata  README.md  pubspec.yaml
projectm_texture/android/: build.gradle.kts  settings.gradle.kts
projectm_texture/android/src/main/: AndroidManifest.xml
projectm_texture/android/src/main/kotlin/com/example/projectm_texture/: ProjectmTexturePlugin.kt
projectm_texture/android/src/test/kotlin/com/example/projectm_texture/: ProjectmTexturePluginTest.kt
projectm_texture/example/: README.md  pubspec.yaml
projectm_texture/example/android/app/: build.gradle.kts
projectm_texture/example/android/app/src/main/: AndroidManifest.xml
projectm_texture/example/integration_test/: plugin_integration_test.dart
projectm_texture/example/lib/: main.dart
projectm_texture/example/linux/: CMakeLists.txt
projectm_texture/example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
projectm_texture/example/linux/runner/: my_application.cc
projectm_texture/example/test/: widget_test.dart
projectm_texture/lib/: projectm_texture.dart  projectm_texture_method_channel.dart  projectm_texture_platform_interface.dart
projectm_texture/linux/: CMakeLists.txt  projectm_texture_gl.cc  projectm_texture_plugin.cc  projectm_texture_plugin_private.h  test_gobject.cc
projectm_texture/linux/include/projectm_texture/: projectm_texture_plugin.h
projectm_texture/linux/test/: projectm_texture_plugin_test.cc
projectm_texture/test/: projectm_texture_method_channel_test.dart  projectm_texture_test.dart
projectm_texture/windows/: CMakeLists.txt  gl_d3d_interop.cpp  gl_d3d_interop.h  projectm_texture_plugin.cpp  projectm_texture_plugin.h
projectm_texture/windows/include/projectm_texture/: projectm_texture_plugin_c_api.h
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
